# PhysicsEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  axis.vert  grid.frag  grid.vert  imgui.ini  imgui.ini.bak  point.frag  point.vert
inc/: camera.hpp  glm_compat.hpp  grid.hpp  particle.hpp  physics.hpp  render_loop.hpp  render_utils.hpp  ui.hpp
src/: grid.cpp  main.cpp  particle.cpp  physics.cpp  render_loop.cpp  render_utils.cpp  ui.cpp
